dev server trial

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -9,14 +9,21 @@ body {
   /* width: 100%; */
 }
 .container {
-    /* height: 50%; */
-    background-color: red;
+    height: 50%;
     display: flex;
     flex-direction: row;
     width: 40%;
+	background-color: whitesmoke;
 }
 .results-container {
     width: 50%;
+    /* word-wrap: break-word; */
+	border-radius: 8px;
+	background-color: blue;
+}
+.description {
+    display: flex;
+    flex-direction: column;
 }
 .sum-btn-container {
     width: 50%;
@@ -26,3 +33,8 @@ body {
     display: flex;
     flex-direction: column;
 }
+/*other screens*/
+
+@media screen and (max-width: 400px) {
+.container {
+width: 80%;
