--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -1,5 +1,5 @@
 body {
-  /* height: 100vh; */
+  font-family: "Hanken Grotesk";
 }
 .main-container {
   height: 96vh;
@@ -9,30 +9,87 @@ body {
   /* width: 100%; */
 }
 .container {
-  height: 50%;
+  /* height: 50%; */
   display: flex;
   flex-direction: row;
   width: 40%;
-  background-color: whitesmoke;
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 30px;
+  box-shadow: 1em 1em 0.6em hsl(252, 100%, 97%);
 }
 .results-container {
   width: 50%;
   /* word-wrap: break-word; */
-  border-radius: 8px;
-  background-color: blue;
+  border-radius: 30px;
+  background-color: rgb(49, 44, 234);
   color: whitesmoke;
+  font-weight: 400;
+  text-align: center;
+}
+.res {
+  font-weight: bolder;
+}
+.avrg-score {
+  padding: 4em 4em;
+  margin: 2em 0;
+  background-color: hsla(256, 72%, 46%, 1);
+  border-radius: 100%;
 }
 .description {
   display: flex;
   flex-direction: column;
-align-items:center;
+  align-items: center;
+  font-size: 18px;
 }
 .sum-btn-container {
   width: 50%;
-color:gray;
+  color: gray;
+}
+.head {
+  font-weight: 800;
+  font-size: 18px;
+}
+.summary {
+  color: hsl(224, 30%, 27%);
+}
+.tab {
+  font-weight: 700;
+  padding: 1em 2em;
+  margin: 0.5em;
+  /* width: 15em; */
+  width: 90%;
+  border-radius: 8px;
+}
+.reaction {
+  color: hsl(0, 100%, 67%);
+}
+.reaction-tab {
+  background-color: hsl(0, 100%, 98%);
+}
+.memory {
+  color: hsl(39, 100%, 56%);
+}
+.memory-tab {
+  background-color: hsl(39, 100%, 98%);
+}
+.verbal {
+  color: hsl(166, 100%, 37%);
+}
+.verbal-tab {
+  background-color: hsl(166, 100%, 98%);
+}
+.visual {
+  color: hsl(234, 85%, 45%);
+}
+.visual-tab {
+  background-color: hsl(234, 85%, 98%);
+}
+.tab span {
+  /* width: 50%; */
+  /* background-color: red; */
 }
 .card {
-  padding: 2% 3%;
+  padding: 2% 4%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,5 +99,6 @@ color:gray;
 @media screen and (max-width: 1000px) {
   .container {
     width: 80%;
+    /* height: 65%; */
   }
 }
