--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -21,25 +21,37 @@ body {
   width: 50%;
   /* word-wrap: break-word; */
   border-radius: 30px;
-  background-color: rgb(49, 44, 234);
+  /* background-color: rgb(49, 44, 234); */
   color: whitesmoke;
   font-weight: 400;
   text-align: center;
+  background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
 }
 .res {
   font-weight: bolder;
 }
 .avrg-score {
-  padding: 4em 4em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20%;
+  /* height: 10em;
+  width: 10em; */
   margin: 2em 0;
-  background-color: hsla(256, 72%, 46%, 1);
+  /* background-color: hsla(256, 72%, 46%, 1); */
   border-radius: 100%;
+  background: linear-gradient(hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
 }
 .description {
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: 18px;
+}
+.bg-span {
+  font-weight: bolder;
+  font-size: xx-large;
 }
 .sum-btn-container {
   width: 50%;
@@ -98,7 +110,7 @@ body {
 
 @media screen and (max-width: 1000px) {
   .container {
-    width: 80%;
-    /* height: 65%; */
+    width: 70%;
+    /* height: 70%; */
   }
 }
