--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -36,12 +36,20 @@ body {
   align-items: center;
   flex-direction: column;
   padding: 20%;
-  /* height: 10em;
-  width: 10em; */
+  height: 4em;
+  width: 4em;
   margin: 2em 0;
   /* background-color: hsla(256, 72%, 46%, 1); */
   border-radius: 100%;
   background: linear-gradient(hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
+}
+.average {
+  font-size: 60px;
+  font-weight: 800;
+}
+.sub-text {
+  color: hsl(0, 0%, 80%);
+  font-weight: 700;
 }
 .description {
   display: flex;
@@ -50,8 +58,11 @@ body {
   font-size: 18px;
 }
 .bg-span {
-  font-weight: bolder;
-  font-size: xx-large;
+  font-weight: 800;
+  font-size: x-large;
+}
+.description p {
+  font-size: 18px;
 }
 .sum-btn-container {
   width: 50%;
@@ -65,40 +76,57 @@ body {
   color: hsl(224, 30%, 27%);
 }
 .tab {
+  display: flex;
+  flex-direction: row;
   font-weight: 700;
   padding: 1em 2em;
   margin: 0.5em;
   /* width: 15em; */
-  width: 90%;
+  width: 80%;
   border-radius: 8px;
 }
 .reaction {
   color: hsl(0, 100%, 67%);
+  width: 50%;
 }
 .reaction-tab {
   background-color: hsl(0, 100%, 98%);
 }
 .memory {
   color: hsl(39, 100%, 56%);
+  width: 50%;
 }
 .memory-tab {
   background-color: hsl(39, 100%, 98%);
+  /* margin-bottom: 1%; */
 }
 .verbal {
   color: hsl(166, 100%, 37%);
+  width: 50%;
 }
 .verbal-tab {
   background-color: hsl(166, 100%, 98%);
 }
 .visual {
   color: hsl(234, 85%, 45%);
+  width: 50%;
 }
 .visual-tab {
   background-color: hsl(234, 85%, 98%);
 }
-.tab span {
-  /* width: 50%; */
-  /* background-color: red; */
+.score {
+  width: 50%;
+}
+.btn {
+  background-color: hsl(224, 30%, 27%);
+  padding: 6% 7em;
+  border: none;
+  border-radius: 25px;
+  color: hsl(0, 0%, 100%);
+  font-weight: 800;
+  font-size: 14px;
+  width: 100%;
+  margin-top: 8%;
 }
 .card {
   padding: 2% 4%;
