--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -1,3 +1,7 @@
+*{
+  padding: 0;
+  margin: 0;
+}
 body {
   font-family: "Hanken Grotesk";
 }
@@ -140,5 +144,33 @@ body {
   .container {
     width: 70%;
     /* height: 70%; */
+  }
+}
+@media screen and (max-width: 375px) {
+  .main-container {
+    display: block;
+    height: 200vh;
+  }
+  .container {
+    width: 100%;
+    /* background-color: black; */
+    display: block;
+    box-shadow: none;
+  }
+  .results-container {
+    border-radius: 0 0 25px 25px;
+    width: 98%;
+    margin: 0;
+  }
+  .sum-btn-container {
+    width: 98%;
+    padding: 2%;
+  }
+  .card {
+    margin: 0;
+    padding: 1em 1%;
+  }
+  .tab {
+    /* width: 90%; */
   }
 }
