--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -141,6 +141,7 @@ body {
   font-size: 14px;
   width: 90%;
   margin: 4em 0;
+  /* word-spacing: 2%; */
 }
 .card {
   padding: 2% 4%;
@@ -150,13 +151,12 @@ body {
 }
 /*other screens*/
 
-@media screen and (max-width: 1000px) {
+/* @media screen and (max-width: 1000px) {
   .container {
     width: 70%;
-    /* height: 70%; */
   }
-}
-@media screen and (max-width: 400px) {
+}*/
+@media screen and (max-width: 414px) {
   .main-container {
     display: block;
     height: auto;
