--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -16,7 +16,8 @@ body {
   /* height: 50%; */
   display: flex;
   flex-direction: row;
-  width: 40%;
+  /* width: 40%; */
+  margin: 4%;
   background-color: hsl(0, 0%, 100%);
   border-radius: 30px;
   box-shadow: 1em 1em 0.6em hsl(252, 100%, 97%);
@@ -162,10 +163,11 @@ body {
     height: auto;
   }
   .container {
-    width: 100%;
+    /* width: 100%; */
     /* background-color: black; */
     display: block;
     box-shadow: none;
+    margin: 0;
   }
   .results-container {
     border-radius: 0 0 25px 25px;
