--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -97,16 +97,19 @@ body {
   width: 80%;
   border-radius: 8px;
 }
+.icons {
+  margin-right: 4%;
+}
 .reaction {
   color: hsl(0, 100%, 67%);
-  width: 50%;
+  width: 46%;
 }
 .reaction-tab {
   background-color: hsl(0, 100%, 98%);
 }
 .memory {
   color: hsl(39, 100%, 56%);
-  width: 50%;
+  width: 46%;
 }
 .memory-tab {
   background-color: hsl(39, 100%, 98%);
@@ -114,14 +117,14 @@ body {
 }
 .verbal {
   color: hsl(166, 100%, 37%);
-  width: 50%;
+  width: 46%;
 }
 .verbal-tab {
   background-color: hsl(166, 100%, 98%);
 }
 .visual {
   color: hsl(234, 85%, 45%);
-  width: 50%;
+  width: 46%;
 }
 .visual-tab {
   background-color: hsl(234, 85%, 98%);
